# SampleCode

./: .bazelignore  .bazelrc  .gitignore  .hgignore  BUILD  MODULE.bazel  WORKSPACE  compile_commands.json  package.json  requirements.txt  tsconfig.json  tslint.json
.ijwb/: .bazelproject
hermes/example/: BUILD.bazel  client.cc  hello_world_service.proto  main.cc
java/com/elfin/: BUILD  Stripe.java
java/com/elfin/android/: AndroidManifest.xml  BUILD  MainActivity.kt
java/com/elfin/android/testing/junit/: AndroidManifest.xml  BUILD.bazel
java/com/elfin/android/testing/junit/testing/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
java/com/elfin/atlas/: BUILD.bazel  CoroutineModule.kt  GrpcServer.kt  NetworkModule.kt  Rpc.kt  TraceModule.kt
java/com/elfin/atlas/components/: BUILD.bazel  RequestComponent.kt  SingletonComponent.kt
java/com/elfin/atlas/example/: BUILD.bazel  Beam.kt  Client.kt  Main.kt  SimpleComponent.kt  SimpleModule.kt
java/com/elfin/atlas/trace/: BUILD.bazel  Spans.kt
java/com/elfin/csv/: LineParser.kt  Parser.kt
java/com/elfin/google/: ApiFutureKtx.kt  BUILD.bazel  GoogleCloudModule.kt
java/com/elfin/google/api/: Apis.kt  BUILD.bazel
java/com/elfin/google/firebase/: BUILD.bazel  FirebaseModule.kt  FirestoreModule.kt
java/com/elfin/google/firebase/example/: BUILD.bazel  Main.kt  account.proto
java/com/elfin/google/firebase/firestore/: BUILD.bazel  ProtoKtx.kt
java/com/elfin/google/spanner/example/: BUILD.bazel  Main.kt  schema.ddl
java/com/elfin/mongodb/: BUILD.bazel  Mongos.kt
java/com/elfin/mta/: BUILD.bazel  OMNY_Stops.csv  Stations.csv  nyct-subway.proto
java/com/elfin/mta/example/: BUILD.bazel  Main.kt
java/com/elfin/sdui/: BUILD.bazel  BranchComponentContext.kt  ComponentBuilder.kt  ComponentContext.kt  Components.kt  Composer.kt  ContainerBuilder.kt  DebugContext.kt  ForwardingComponentContext.kt  LeafComponentContext.kt  RootBuilder.kt
java/com/elfin/sdui/example/: BUILD.bazel  Main.kt
java/com/elfin/whiteboard/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
java/sun/misc/: BUILD.bazel  SignalHandler.java
javatests/com/elfin/: BUILD  StripeTest.java
javatests/com/elfin/google/spanner/example/firebase/firestore/: BUILD.bazel  ProtoKtxTest.kt  message.proto
javatests/com/elfin/whiteboard/: BUILD.bazel  MainActivityTest.kt
repo/maven/: deps.bzl
repo/maven/jar/: BUILD.bazel
sidecar/example/: envoy.yaml
uix/: BUILD.bazel  serving_context.proto
uix/client/: BUILD.bazel  deps.ts
uix/client/example/: BUILD.bazel  main.tsx  webpack.config.ts
uix/server/example/: BUILD.bazel  main.tsx  serving_context.proto
vcs/git/: BUILD
vcs/git/hooks/: pre-commit  pre-push
