load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":hello_world_service_cc_proto",
        ":hello_world_service_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
        "@com_github_google_glog//:glog",
        "@com_github_gflags_gflags//:gflags",
    ]
)

cc_binary(
    name = "client",
    srcs = [
        "client.cc",
    ],
    deps = [
        ":hello_world_service_cc_proto",
        ":hello_world_service_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
        "@com_github_google_glog//:glog",
        "@com_github_gflags_gflags//:gflags",
    ]
)

proto_library(
    name = "hello_world_service_proto",
    srcs = [
        "hello_world_service.proto"
    ]
)

cc_proto_library(
    name = "hello_world_service_cc_proto",
    deps = [
        ":hello_world_service_proto"
    ]
)

cc_grpc_library(
    name = "hello_world_service_cc_grpc",
    srcs = [":hello_world_service_proto"],
    grpc_only = True,
    deps = [":hello_world_service_cc_proto"],
)

ts_proto_library(
    name = "hello_world_service_ts_proto",
    proto = ":hello_world_service_proto",
    visibility = [
        "//visibility:public",
    ]
)

java_proto_library(
    name = "hello_world_service_java_proto",
    deps = [
        ":hello_world_service_proto",
    ],
    visibility = [
        "//visibility:public",
    ]
)

java_grpc_library(
    name = "hello_world_service_java_grpc",
    srcs = [
        ":hello_world_service_proto",
    ], deps = [
        ":hello_world_service_java_proto",
    ],
    visibility = [
        "//visibility:public",
    ]
)

kt_jvm_proto_library(
    name = "hello_world_service_kt_jvm_proto",
    deps = [":hello_world_service_proto"],
    visibility = [
        "//visibility:public",
    ]
)

kt_jvm_grpc_library(
    name = "hello_world_service_kt_jvm_grpc",
    srcs = [":hello_world_service_proto"],
    deps = [":hello_world_service_kt_jvm_proto"],
    visibility = [
        "//visibility:public",
    ]
)