load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "bundle_rollup",
    deps = [
        ":main",
    ],
    entry_point = ":main",
    format = "iife",
    visibility = ["//visibility:public"]
)

ts_project(
    name = "main",
    srcs = [
        "main.tsx",
    ],
    visibility = [
        "//visibility:public",
    ],
    link_workspace_root = True,
    deps = [
        "@npm//@opentelemetry/sdk-trace-base",
        "@npm//@opentelemetry/sdk-trace-web",
        "@npm//@opentelemetry/api",
        "@npm//@opentelemetry/context-zone",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/express",
        "@npm//grpc-web",
        "@npm//@types/google-protobuf",
        "@npm//@types/node",
        "//hermes/example:hello_world_service_ts_proto",
        "@npm//@opentelemetry/instrumentation-grpc",
        "@npm//@opentelemetry/instrumentation",
    ],
    tsconfig = "//:tsconfig"
)

nodejs_binary(
    name = "example",
    link_workspace_root = True,
    data = [
        ":main",
    ],
    entry_point = ":main",
)

webpack(
    name = "bundle",
    outs = ["app.bundle.js"],
    args = [
        "./$(location :main)",
        "--config",
        "./$(location :webpack)",
        "-o",
        "$@",
    ],
    link_workspace_root = True,
    data = [
        ":main",
        "//hermes/example:hello_world_service_ts_proto",
        ":webpack",
        "@npm//:node_modules",
    ],
    visibility = ["//visibility:public"]
)
ts_project(
    name = "webpack",
    srcs = [
        "webpack.config.ts",
    ],
    deps = [
        "@npm//@types/webpack",
        "@npm//@bazel/runfiles",
    ],
    link_workspace_root = True,
    tsconfig = "//:tsconfig"
)