load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")

ts_project(
    name = "main",
    srcs = [
        "main.tsx",
    ],
    link_workspace_root = True,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/express",
        ":serving_context_ts_proto",
        "@npm//@types/google-protobuf",
        "@npm//@bazel/runfiles",
    ],
    tsconfig = "//:tsconfig"
)

nodejs_binary(
    name = "example",
    link_workspace_root = True,
    data = [
        ":main",
        ":serving_context_ts_proto",
        "//uix/client/example:bundle",
    ],
    entry_point = ":main",
)

proto_library(
    name = "serving_context_proto",
    srcs = [
        "serving_context.proto",
    ]
)

ts_proto_library(
    name = "serving_context_ts_proto",
    proto = ":serving_context_proto",
    visibility = [
        "//visibility:public",
    ]
)
