load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")

ts_project(
    name = "main",
    srcs = [
        "main.tsx",
    ],
    link_workspace_root = True,
    tsconfig = "//:tsconfig",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":serving_context_ts_proto",
        "@npm//@bazel/runfiles",
        "@npm//@types/express",
        "@npm//@types/google-protobuf",
        "@npm//@types/react",
        "@npm//@types/react-dom",
    ],
)

nodejs_binary(
    name = "example",
    data = [
        ":main",
        ":serving_context_ts_proto",
        "//uix/client/example:bundle",
    ],
    entry_point = ":main",
    link_workspace_root = True,
)

proto_library(
    name = "serving_context_proto",
    srcs = [
        "serving_context.proto",
    ],
)

ts_proto_library(
    name = "serving_context_ts_proto",
    proto = ":serving_context_proto",
    visibility = [
        "//visibility:public",
    ],
)
