load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "mongodb",
    srcs = [
        "Mongos.kt"
    ],
    deps = [
        "@maven//:org_mongodb_mongodb_driver_reactivestreams",
        "@maven//:com_google_api_api_common",
        "@maven//:com_google_cloud_google_cloud_spanner",
    ]
)