load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_proto_library")

proto_library(
    name = "gtfs_realtime_proto",
    srcs = ["gtfs-realtime.proto"],
)

java_proto_library(
    name = "gtfs_realtime_java_proto",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":gtfs_realtime_proto",
    ],
)

kt_jvm_proto_library(
    name = "gtfs_realtime_kt_jvm_proto",
    visibility = [
        "//visibility:public",
    ],
    deps = [":gtfs_realtime_proto"],
)

proto_library(
    name = "nyct_subway_proto",
    srcs = ["nyct-subway.proto"],
    deps = [
        ":gtfs_realtime_proto",
    ],
)

kt_jvm_proto_library(
    name = "nyct_subway_kt_jvm_proto",
    visibility = [
        "//visibility:public",
    ],
    deps = [":nyct_subway_proto"],
)

filegroup(
    name = "nyc",
    srcs = [
        "Stations.csv",
    ],
    visibility = [
        "//visibility:public",
    ],
)
