load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "whiteboard",
    testonly = 1,
    srcs = [
        "MainActivityTest.kt",
    ],
    deps = [
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_material_material",
        "@maven//:com_google_dagger_dagger",
    ],
)
