load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

kt_jvm_library(
    name = "components",
    srcs = [
        "RequestComponent.kt",
        "SingletonComponent.kt",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//java/com/elfin/atlas:coroutine_module",
        "//java/com/elfin/atlas:network_module",
        "//java/com/elfin/atlas:trace_module",
    ],
)
