load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "Main",
    srcs = ["Main.kt"],
    main_class = "com.elfin.atlas.example.Main",
    deps = [
        "//hermes/example:hello_world_service_kt_jvm_grpc",
        "//hermes/example:hello_world_service_kt_jvm_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
    ],
    runtime_deps = [
        "@maven//:io_grpc_grpc_netty",
    ]
)