load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "trace",
    srcs = ["Spans.kt"],
    deps = [
        "//:dagger",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@maven//:com_google_guava_guava",
        "@io_grpc_grpc_java//api",
        "@com_github_grpc_grpc_kotlin//stub/src/main/java/io/grpc/kotlin:context",
        "@maven//:io_opentelemetry_opentelemetry_extension_kotlin",
    ],
    visibility = [
        "//visibility:public",
    ]
)