load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "trace",
    srcs = ["Spans.kt"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "@com_github_grpc_grpc_kotlin//stub/src/main/java/io/grpc/kotlin:context",
        "@io_grpc_grpc_java//api",
        "@maven//:com_google_guava_guava",
        "@maven//:io_opentelemetry_opentelemetry_extension_kotlin",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)
