load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

kt_jvm_binary(
    name = "Main",
    srcs = ["Main.kt"],
    main_class = "com.elfin.mta.example.Main",
    deps = [
        "@flogger//api",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "//java/com/elfin/mta:gtfs_realtime_kt_jvm_proto"
    ],
)