load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "ext",
    srcs = [
        "ProtoKtx.kt",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "@com_google_protobuf//java/core",
        "@maven//:com_google_firebase_firebase_admin",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@maven//:com_google_cloud_google_cloud_firestore",
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_guava",
        "@maven//:com_google_api_api_common",
        "//java/com/elfin/google:ktx",
        "@maven//:com_google_guava_guava",
    ],
)