load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    srcs = [
        "MainActivity.kt"
    ],
    deps = [
        "@maven//:androidx_appcompat_appcompat",
    ]
)

android_binary(
    name = "testing",
    manifest = "AndroidManifest.xml",
    deps = [
        ":lib",
    ],
)